bzr merge -r3946..3968 codership/5.5

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -314,7 +314,13 @@ IF(WIN32)
   ENDFOREACH()
 ELSE()
   IF(WITH_WSREP)
-    SET(WSREP_BINARIES wsrep_sst_common wsrep_sst_mysqldump wsrep_sst_rsync wsrep_sst_xtrabackup)
+    SET(WSREP_BINARIES
+      wsrep_sst_common
+      wsrep_sst_mysqldump
+      wsrep_sst_rsync
+      wsrep_sst_xtrabackup
+      wsrep_sst_xtrabackup-v2
+    )
   ENDIF()
   # On Unix, most of the files end up in the bin directory
   SET(BIN_SCRIPTS
