Added support for LZO compression method.
Removed: innodb_use_lz4 configuration parameter

Added: innodb_compression_algorithm configuration parameter
0 = no compression, 1 = ZLIB, 2 = LZ4, 3 = LZO

Fixed issue with incorrect trim calculations

--- a/storage/innobase/CMakeLists.txt
+++ b/storage/innobase/CMakeLists.txt
@@ -19,8 +19,10 @@ INCLUDE(CheckFunctionExists)
 INCLUDE(CheckCSourceCompiles)
 INCLUDE(CheckCSourceRuns)
 INCLUDE(lz4)
+INCLUDE(lzo)
 
-MYSQL_CHECK_SHARED_LZ4()
+MYSQL_CHECK_LZ4()
+MYSQL_CHECK_LZO()
 
 # OS tests
 IF(UNIX)
