MDEV-6196 MTR: Do not hardcode path for libgalera_smm.so
Introduced an environment variable WSREP_PROVIDER to point
to the galera library.

Updated the tests.

--- a/mysql-test/suite/galera/galera_2nodes.cnf
+++ b/mysql-test/suite/galera/galera_2nodes.cnf
@@ -3,12 +3,12 @@
 
 [mysqld.1]
 binlog-format=row
-wsrep_provider=/usr/lib/galera/libgalera_smm.so
+wsrep_provider=@ENV.WSREP_PROVIDER
 wsrep_cluster_address='gcomm://'
 
 [mysqld.2]
 binlog-format=row
-wsrep_provider=/usr/lib/galera/libgalera_smm.so
+wsrep_provider=@ENV.WSREP_PROVIDER
 wsrep_cluster_address='gcomm://127.0.0.1:4567'
 wsrep_provider_options='gmcast.listen_addr=tcp://127.0.0.1:4568'
 
