--- a/cmake/make_dist.cmake.in
+++ b/cmake/make_dist.cmake.in
@@ -23,6 +23,7 @@ SET(CPACK_SOURCE_PACKAGE_FILE_NAME "@CPACK_SOURCE_PACKAGE_FILE_NAME@")
 SET(CMAKE_CPACK_COMMAND  "@CMAKE_CPACK_COMMAND@")
 SET(CMAKE_COMMAND  "@CMAKE_COMMAND@")
 SET(BZR_EXECUTABLE "@BZR_EXECUTABLE@")
+SET(GIT_EXECUTABLE "@GIT_EXECUTABLE@")
 SET(GTAR_EXECUTABLE "@GTAR_EXECUTABLE@")
 SET(TAR_EXECUTABLE "@TAR_EXECUTABLE@")
 SET(CMAKE_GENERATOR "@CMAKE_GENERATOR@")
@@ -39,7 +40,20 @@ SET(PACKAGE_DIR  ${CMAKE_BINARY_DIR}/${CPACK_SOURCE_PACKAGE_FILE_NAME})
 FILE(REMOVE_RECURSE ${PACKAGE_DIR})
 FILE(REMOVE ${PACKAGE_DIR}.tar.gz )
 
-IF(BZR_EXECUTABLE)
+IF(GIT_EXECUTABLE)
+  MESSAGE(STATUS "Running git checkout-index")
+  EXECUTE_PROCESS(
+    COMMAND "${GIT_EXECUTABLE}" checkout-index --all --prefix=${PACKAGE_DIR}/
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    RESULT_VARIABLE RESULT
+  )
+
+  IF(NOT RESULT EQUAL 0)
+   SET(GIT_EXECUTABLE)
+  ENDIF()
+ENDIF()
+
+IF(BZR_EXECUTABLE AND NOT GIT_EXECUTABLE)
   MESSAGE(STATUS "Running bzr export")
   EXECUTE_PROCESS(
     COMMAND "${BZR_EXECUTABLE}" export 
@@ -53,7 +67,7 @@ IF(BZR_EXECUTABLE)
   ENDIF()
 ENDIF()
 
-IF(NOT BZR_EXECUTABLE)
+IF(NOT BZR_EXECUTABLE AND NOT GIT_EXECUTABLE)
   MESSAGE(STATUS "bzr not found or source dir is not a repo, use CPack")
   
   IF(CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR)
