--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -474,7 +474,7 @@ ADD_CUSTOM_TARGET(INFO_BIN ALL
   WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
 )
 
-INSTALL_DOCUMENTATION(README TODO CREDITS COPYING COPYING.LESSER
+INSTALL_DOCUMENTATION(README CREDITS COPYING COPYING.LESSER
                       COMPONENT Readme)
 INSTALL_DOCUMENTATION(${CMAKE_BINARY_DIR}/Docs/INFO_SRC
                       ${CMAKE_BINARY_DIR}/Docs/INFO_BIN)
