--- a/.bzrignore
+++ b/.bzrignore
@@ -1457,3 +1457,4 @@ storage/connect/connect.cnf
 storage/cassandra/cassandra.cnf
 libmysql/libmysql_versions.ld
 scripts/mysql_config.pl
+pcre/pcre_chartables.c
