bzr ignore 'pcre/test*grep'

--- a/.bzrignore
+++ b/.bzrignore
@@ -1458,3 +1458,4 @@ storage/cassandra/cassandra.cnf
 libmysql/libmysql_versions.ld
 scripts/mysql_config.pl
 pcre/pcre_chartables.c
+pcre/test*grep
