MDEV-6361: innodb_compression_algorithm configuration variable can be set to unsupported value.
MDEV-6350: Excessive unnecessary memory allocation at InnoDB/XtraDB
startup if LZO is installed.

--- a/storage/xtradb/CMakeLists.txt
+++ b/storage/xtradb/CMakeLists.txt
@@ -21,8 +21,8 @@ INCLUDE(CheckCSourceRuns)
 INCLUDE(lz4)
 INCLUDE(lzo)
 
-MYSQL_CHECK_LZ4_STATIC()
-MYSQL_CHECK_LZO_STATIC()
+MYSQL_CHECK_LZ4()
+MYSQL_CHECK_LZO()
 
 # OS tests
 IF(UNIX)
