deb hack: don't set CASSANDRA_DEB_FILES unless cassandra can be built

--- a/storage/cassandra/CMakeLists.txt
+++ b/storage/cassandra/CMakeLists.txt
@@ -49,7 +49,9 @@ SET(cassandra_sources
 
 LINK_DIRECTORIES(${LINK_DIR})
 
-SET(CASSANDRA_DEB_FILES "usr/lib/mysql/plugin/ha_cassandra.so" PARENT_SCOPE)
+IF(CASSANDRASE_OK)
+  SET(CASSANDRA_DEB_FILES "usr/lib/mysql/plugin/ha_cassandra.so" PARENT_SCOPE)
+ENDIF(CASSANDRASE_OK)
 
 MYSQL_ADD_PLUGIN(cassandra ${cassandra_sources} STORAGE_ENGINE
   ONLY_IF CASSANDRASE_OK
