MDEV-3896: More user-friendly cnf files in MariaDB-Galera rpm/deb packages
* Added "galera" as default option group.
* Updated deb/rpm server config files to include mandatory
  and optional settings (as comments) required to configure
  Galera cluster.

--- a/debian/additions/my.cnf
+++ b/debian/additions/my.cnf
@@ -151,7 +151,21 @@ innodb_flush_method	= O_DIRECT
 # ssl-cert=/etc/mysql/server-cert.pem
 # ssl-key=/etc/mysql/server-key.pem
 
-
+#
+# * Galera-related settings
+#
+[galera]
+# Mandatory settings
+#wsrep_provider=
+#wsrep_cluster_address=
+#wsrep_slave_threads=1
+#binlog_format=row
+#default_storage_engine=InnoDB
+#innodb_autoinc_lock_mode=2
+#query_cache_size=0
+#
+# Optional setting
+#innodb_flush_log_at_trx_commit=2
 
 [mysqldump]
 quick
