MDEV-6354: Implement a way to read MySQL 5.7.4-labs-tplc page compression format (Fusion-IO).
Addeed LZMA and BZIP2 compression methods.

--- a/storage/innobase/CMakeLists.txt
+++ b/storage/innobase/CMakeLists.txt
@@ -20,9 +20,13 @@ INCLUDE(CheckCSourceCompiles)
 INCLUDE(CheckCSourceRuns)
 INCLUDE(lz4)
 INCLUDE(lzo)
+INCLUDE(lzma)
+INCLUDE(bzip2)
 
 MYSQL_CHECK_LZ4()
 MYSQL_CHECK_LZO()
+MYSQL_CHECK_LZMA()
+MYSQL_CHECK_BZIP2()
 
 # OS tests
 IF(UNIX)
