--- a/storage/xtradb/CMakeLists.txt
+++ b/storage/xtradb/CMakeLists.txt
@@ -20,9 +20,13 @@ INCLUDE(CheckCSourceCompiles)
 INCLUDE(CheckCSourceRuns)
 INCLUDE(lz4)
 INCLUDE(lzo)
+INCLUDE(lzma)
+INCLUDE(bzip2)
 
 MYSQL_CHECK_LZ4()
 MYSQL_CHECK_LZO()
+MYSQL_CHECK_LZMA()
+MYSQL_CHECK_BZIP2()
 
 # OS tests
 IF(UNIX)
