MDEV-6485 Hard-coded paths in the source cannot be opt-out
when looking for my.cnf files: if DEFAULT_SYSCONFDIR (or INSTALL_SYSCONFDIR)
is specified (for rpms it always is), use that instead of hardcoded /etc path.

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -221,7 +221,11 @@ INSTALL_SCRIPT(
 ENDIF()
 
 SET(prefix "${CMAKE_INSTALL_PREFIX}")
-SET(sysconfdir ${prefix})
+IF(INSTALL_SYSCONFDIR)
+  SET(sysconfdir ${DEFAULT_SYSCONFDIR})
+ELSE()
+  SET(sysconfdir "/etc")
+ENDIF()
 SET(bindir ${prefix}/${INSTALL_BINDIR})
 SET(libexecdir ${prefix}/${INSTALL_SBINDIR})
 SET(scriptdir ${prefix}/${INSTALL_BINDIR})
