--- a/mysql-test/suite/galera/galera_2nodes.cnf
+++ b/mysql-test/suite/galera/galera_2nodes.cnf
@@ -7,6 +7,8 @@ wsrep_provider=@ENV.WSREP_PROVIDER
 wsrep_cluster_address='gcomm://'
 wsrep_provider_options='base_port=@mysqld.1.#galera_port'
 wsrep_sst_receive_address='127.0.0.1:@mysqld.1.#sst_port'
+# enforce read-committed characteristics across the cluster
+wsrep_causal_reads=ON
 
 [mysqld.2]
 binlog-format=row
@@ -14,6 +16,8 @@ wsrep_provider=@ENV.WSREP_PROVIDER
 wsrep_cluster_address='gcomm://127.0.0.1:@mysqld.1.#galera_port'
 wsrep_provider_options='base_port=@mysqld.2.#galera_port'
 wsrep_sst_receive_address='127.0.0.1:@mysqld.2.#sst_port'
+# enforce read-committed characteristics across the cluster
+wsrep_causal_reads=ON
 
 [ENV]
 NODE_MYPORT_1= @mysqld.1.port
