--- a/libmysql/CMakeLists.txt
+++ b/libmysql/CMakeLists.txt
@@ -257,6 +257,9 @@ mariadb_dyncol_unpack_free
 mariadb_dyncol_column_cmp_named
 mariadb_dyncol_column_count
 mariadb_dyncol_prepare_decimal
+
+# Added in MariaDB-10.0 to stay compatible with MySQL-5.6, yuck!
+mysql_options4
 )
 
 SET(CLIENT_API_FUNCTIONS
