Updated config files:  - Removed QC restriction  - Added bind-address Fixed file permissions for wsrep_sst_rsync.sh.

--- a/debian/additions/my.cnf
+++ b/debian/additions/my.cnf
@@ -162,7 +162,7 @@ innodb_flush_method	= O_DIRECT
 #binlog_format=row
 #default_storage_engine=InnoDB
 #innodb_autoinc_lock_mode=2
-#query_cache_size=0
+#bind-address=0.0.0.0
 #
 # Optional setting
 #innodb_flush_log_at_trx_commit=0
