--- a/support-files/rpm/server.cnf
+++ b/support-files/rpm/server.cnf
@@ -22,7 +22,7 @@
 #binlog_format=row
 #default_storage_engine=InnoDB
 #innodb_autoinc_lock_mode=2
-#query_cache_size=0
+#bind-address=0.0.0.0
 #
 # Optional setting
 #innodb_flush_log_at_trx_commit=0
