fixed unit tests

--- a/unittest/eperi/CMakeLists.txt
+++ b/unittest/eperi/CMakeLists.txt
@@ -25,14 +25,13 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/sql
                     )
 
 MY_ADD_TESTS(eperi)
-MY_ADD_TESTS(eperi_keyfile 
-	LINK_LIBRARIES mysys pcre)
+#MY_ADD_TESTS(eperi_keyfile 
+#	LINK_LIBRARIES mysys pcre)
 MY_ADD_TESTS(eperi_aes 
 	LINK_LIBRARIES mysys_ssl dbug)
 
-MY_ADD_TESTS(enc0enc 
- 
- johnny
+MY_ADD_TESTS(
+ pageenc
   EXT "cc" 
   LINK_LIBRARIES xtradb perfschema mysys mysys_ssl sql mysql)
 
@@ -40,3 +39,23 @@ MY_ADD_TESTS(enc0enc
 file(COPY
 	${CMAKE_CURRENT_LIST_DIR}/keys.txt
 	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/xaa
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/xab
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/xac
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/xad
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/xae
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/xaf
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+	
