Key file parser can handle encrypted keyfiles
Keyfiles can now be encrypted the parser will expect a keyfile encrypted with a shared secret, using openssl commandline.
i.e. 'openssl enc -aes-256-cbc -md sha1 -k secret -in keys.txt -out keys.enc'
Make sure to use sha1 as message digest and aes-256-cbc.

--- a/unittest/eperi/CMakeLists.txt
+++ b/unittest/eperi/CMakeLists.txt
@@ -40,3 +40,6 @@ MY_ADD_TESTS(enc0enc
 file(COPY
 	${CMAKE_CURRENT_LIST_DIR}/keys.txt
 	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/keys.enc
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
