--- a/sql/sql_builtin.cc.in
+++ b/sql/sql_builtin.cc.in
@@ -27,7 +27,7 @@ builtin_maria_plugin
   @mysql_mandatory_plugins@ @mysql_optional_plugins@
   builtin_maria_binlog_plugin,
 #ifdef WITH_WSREP
-	builtin_wsrep_plugin@mysql_plugin_defs@,
+  builtin_wsrep_plugin,
 #endif /* WITH_WSREP */
  builtin_maria_mysql_password_plugin;
 
@@ -40,7 +40,7 @@ struct st_maria_plugin *mysql_mandatory_plugins[]=
 {
   builtin_maria_binlog_plugin, builtin_maria_mysql_password_plugin,
 #ifdef WITH_WSREP
-  builtin_wsrep_plugin@mysql_plugin_defs@,
+  builtin_wsrep_plugin,
 #endif /* WITH_WSREP */
   @mysql_mandatory_plugins@ 0
 };
