--- a/mysql-test/suite/wsrep/my.cnf
+++ b/mysql-test/suite/wsrep/my.cnf
@@ -1,27 +1,28 @@
 # Use default setting for mysqld processes
 !include include/default_mysqld.cnf
 
-[mysqld.1]
+[mysqld]
+wsrep-on=1
 binlog-format=row
-#galera_port=OPT.port
-#sst_port=OPT.port
+innodb-autoinc-lock-mode=2
+innodb-locks-unsafe-for-binlog=1
+wsrep-cluster-address=gcomm://
 wsrep_provider=@ENV.WSREP_PROVIDER
-wsrep_cluster_address='gcomm://'
-wsrep_provider_options='base_port=@mysqld.1.#galera_port'
-wsrep_sst_receive_address='127.0.0.1:@mysqld.1.#sst_port'
 # enforce read-committed characteristics across the cluster
 wsrep_causal_reads=ON
 
+[mysqld.1]
+#galera_port=@OPT.port
+#sst_port=@OPT.port
+wsrep_provider_options='base_port=@mysqld.1.#galera_port'
+wsrep_sst_receive_address='127.0.0.1:@mysqld.1.#sst_port'
+
 [mysqld.2]
-binlog-format=row
-#galera_port=OPT.port
-#sst_port=OPT.port
-wsrep_provider=@ENV.WSREP_PROVIDER
+#galera_port=@OPT.port
+#sst_port=@OPT.port
 wsrep_cluster_address='gcomm://127.0.0.1:@mysqld.1.#galera_port'
 wsrep_provider_options='base_port=@mysqld.2.#galera_port'
 wsrep_sst_receive_address='127.0.0.1:@mysqld.2.#sst_port'
-# enforce read-committed characteristics across the cluster
-wsrep_causal_reads=ON
 
 [ENV]
 NODE_MYPORT_1= @mysqld.1.port
