florin key auslesen

--- a/storage/xtradb/CMakeLists.txt
+++ b/storage/xtradb/CMakeLists.txt
@@ -333,6 +333,9 @@ SET(INNOBASE_SOURCES
 	dict/dict0stats.cc
 	dict/dict0stats_bg.cc
 	dyn/dyn0dyn.cc
+	    enc/EncKeys.cc
+	    enc/KeySingleton.cc
+	    enc/keyfile.c
 	eval/eval0eval.cc
 	eval/eval0proc.cc
 	fil/fil0fil.cc
