fixing embedded: WaaS. Wsrep as a Service.

--- a/libservices/CMakeLists.txt
+++ b/libservices/CMakeLists.txt
@@ -26,6 +26,7 @@ SET(MYSQLSERVICES_SOURCES
   debug_sync_service.c
   my_sha1_service.c
   my_md5_service.c
+  wsrep_service.c
   kill_statement_service.c
   logger_service.c)
 
