working with PAGE_COMPRESSED PAGE_ENCRYPTION and no use of flush_lsn header

--- a/unittest/eperi/CMakeLists.txt
+++ b/unittest/eperi/CMakeLists.txt
@@ -62,4 +62,11 @@ file(COPY
 file(COPY
 	${CMAKE_CURRENT_LIST_DIR}/xaf
 	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/compressed
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/compressed_full
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
 	
