bzr merge -r4123..4144 codership/5.6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -154,6 +154,7 @@ INCLUDE(cpack_rpm)
 INCLUDE(cpack_deb)
 
 # Add macros
+INCLUDE(wsrep)
 INCLUDE(character_sets)
 INCLUDE(cpu_info)
 INCLUDE(zlib)
@@ -167,7 +168,6 @@ INCLUDE(ctest)
 INCLUDE(plugin)
 INCLUDE(install_macros)
 INCLUDE(mysql_add_executable)
-INCLUDE(wsrep)
 
 # Handle options
 OPTION(DISABLE_SHARED 
@@ -290,6 +290,7 @@ MARK_AS_ADVANCED(WITH_FAST_MUTEXES)
 
 OPTION(WITH_INNODB_DISALLOW_WRITES "InnoDB freeze writes patch from Google" ${WITH_WSREP})
 IF (WITH_INNODB_DISALLOW_WRITES)
+  MESSAGE(STATUS "INNODB_DISALLOW_WRITES")
   SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DWITH_INNODB_DISALLOW_WRITES")
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWITH_INNODB_DISALLOW_WRITES")
 ENDIF()
