MDEV-5749 Please add a .pc file to MariaDB for easy use via pkg-config

--- a/.gitignore
+++ b/.gitignore
@@ -195,6 +195,7 @@ support-files/binary-configure
 support-files/config.huge.ini
 support-files/config.medium.ini
 support-files/config.small.ini
+support-files/mariadb.pc
 support-files/my-huge.cnf
 support-files/my-innodb-heavy-4G.cnf
 support-files/my-large.cnf
