--- a/sql/CMakeLists.txt
+++ b/sql/CMakeLists.txt
@@ -13,6 +13,7 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301 USA
 
+add_definitions(-D_special_)
 
 IF(WITH_WSREP AND NOT EMBEDDED_LIBRARY)
   SET(WSREP_INCLUDES ${CMAKE_SOURCE_DIR}/wsrep)
