fix Linux - Windows patch

--- a/unittest/eperi/CMakeLists.txt
+++ b/unittest/eperi/CMakeLists.txt
@@ -27,8 +27,8 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/sql
 if (WIN32) 
 else()
 MY_ADD_TESTS(eperi)
-MY_ADD_TESTS(eperi_aes 
-	LINK_LIBRARIES mysys_ssl dbug)
+#MY_ADD_TESTS(eperi_aes 
+#	LINK_LIBRARIES mysys_ssl dbug)
 
 
 MY_ADD_TESTS(EperiKeySingleton
