after-merge fixes

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ extra/perror
 extra/replace
 extra/resolve_stack_dump
 extra/resolveip
+import_executables.cmake
 include/*.h.tmp
 include/config.h
 include/my_config.h
@@ -169,26 +170,24 @@ storage/perfschema/pfs_lex_token.h
 storage/tokudb/ft-index/buildheader/db.h
 storage/tokudb/ft-index/buildheader/make_tdb
 storage/tokudb/ft-index/buildheader/runcat.sh
-storage/tokudb/ft-index/ft/ftverify
 storage/tokudb/ft-index/ft/log_code.cc
 storage/tokudb/ft-index/ft/log_header.h
 storage/tokudb/ft-index/ft/log_print.cc
 storage/tokudb/ft-index/ft/logformat
-storage/tokudb/ft-index/ft/tdb-recover
-storage/tokudb/ft-index/ft/tdb_logprint
-storage/tokudb/ft-index/ft/tokuftdump
 storage/tokudb/ft-index/portability/merge_archives_tokuportability_static.cmake
 storage/tokudb/ft-index/portability/toku_config.h
 storage/tokudb/ft-index/portability/tokuportability_static_depends.cc
 storage/tokudb/ft-index/src/merge_archives_tokufractaltree_static.cmake
 storage/tokudb/ft-index/src/tokufractaltree_static_depends.cc
 storage/tokudb/ft-index/toku_include/toku_config.h
+storage/tokudb/ft-index/tools/ba_replay
+storage/tokudb/ft-index/tools/ftverify
+storage/tokudb/ft-index/tools/tdb-recover
+storage/tokudb/ft-index/tools/tdb_logprint
 storage/tokudb/ft-index/tools/tokudb_dump
 storage/tokudb/ft-index/tools/tokudb_gen
 storage/tokudb/ft-index/tools/tokudb_load
-storage/tokudb/ft-index/utils/tokudb_dump
-storage/tokudb/ft-index/utils/tokudb_gen
-storage/tokudb/ft-index/utils/tokudb_load
+storage/tokudb/ft-index/tools/tokuftdump
 storage/tokudb/ft-index/xz/
 support-files/MySQL-shared-compat.spec
 support-files/binary-configure
