added unit tests for page_encryption, added support for row_format=compressed

--- a/unittest/eperi/CMakeLists.txt
+++ b/unittest/eperi/CMakeLists.txt
@@ -81,6 +81,9 @@ file(COPY
 	${CMAKE_CURRENT_LIST_DIR}/compressed_full
 	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
 file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/compressed_6bytes_av
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY
 	${CMAKE_CURRENT_LIST_DIR}/secret
 	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
 file(COPY
@@ -98,3 +101,52 @@ file(COPY
 file(COPY
 	${CMAKE_CURRENT_LIST_DIR}/secret256.enc
 	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/row_format_compressedaa
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/row_format_compressedab
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/row_format_compressedac
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)	
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/row_format_compressedad
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/row_format_dynamicaa
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/row_format_dynamicab
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/row_format_dynamicac
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)	
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/row_format_dynamicad
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/row_format_redundantaa
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/row_format_redundantab
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/row_format_redundantac
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)	
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/row_format_redundantad
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/row_format_compactaa
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/row_format_compactab
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/row_format_compactac
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)	
+file(COPY
+	${CMAKE_CURRENT_LIST_DIR}/row_format_compactad
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+		
